--- a/include/env.h.template
+++ b/include/env.h.template
@@ -5,6 +5,7 @@
 #define SERIAL_BAUDRATE 9600
 #define POCKETBASE_URL "https://pocketbase.io"
 #define POCKETBASE_TEMPERATURE_ENDPOINT "/api/collections/temperature/records"
-#define POCKETBASE_BEARER // get with https://pocketbase.io/docs/api-records/#auth-with-password
+#define POCKETBASE_EMAIL ""
+#define POCKETBASE_PASSWORD ""
 #define ESP_NOW_PASSWORD ""
 #endif // ENV
