Added 7 days reboot timer to regenerate pocketbase auth token

--- a/include/env.h.template
+++ b/include/env.h.template
@@ -8,4 +8,5 @@
 #define POCKETBASE_EMAIL ""
 #define POCKETBASE_PASSWORD ""
 #define ESP_NOW_PASSWORD ""
+#define REBOOT_TIMER (14 * 24 * 60 * 60 * 1000)
 #endif // ENV
